examples/test/testpolicy12344.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12344
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key12: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value1
          key37: value34
      podSelector:
        matchLabels:
          key31: value16
          key25: value38
